@@ -12,13 +12,13 @@ Copyright (C) 2012-2015  Антон Скшидлевский, [GPLv3](http://ope
 Установка новой ОС занимает около 30 минут. Рекомендованный минимальный размер образа диска без графического интерфейса - 512 МБ, а с графическим интерфейсом - 1024 МБ (для LXDE). При установке ОС в образ на карту памяти с файловой системой FAT32 размер образа не должен превышать 4095 МБ! После начальной установки пароль для доступа по SSH и VNC назначается как "changeme", который можно сменить стандартными средствами ОС.
 
 #### Характеристики: ####
-* Поддерживаемые дистрибутивы: Debian, Ubuntu, Kali Linux, Arch Linux, Fedora, Gentoo, openSUSE, Slackware, RootFS (tgz, tbz2, txz)
+* Поддерживаемые дистрибутивы: Debian, Ubuntu, Kali Linux, Arch Linux, Fedora, CentOS, Gentoo, openSUSE, Slackware, RootFS (tgz, tbz2, txz)
 * Тип установки: файл образа, раздел диска, оперативная память, директория
 * Поддерживаемые файловые системы: ext2, ext3, ext4
 * Поддерживаемые архитектуры: ARM, ARM64, x86, x86_64, режим эмуляции (ARM ~ x86)
 * Интерфейс управления: CLI, SSH, VNC, X, фрейм-буфер
 * Окружение рабочего стола: XTerm, LXDE, Xfce, GNOME, KDE, другое (ручная настройка)
-* Поддерживаемые языки: русский, английский, немецкий, французский, итальянский, испанский, китайский, вьетнамский, словацкий
+* Поддерживаемые языки: русский, английский, немецкий, французский, итальянский, испанский, китайский, вьетнамский, словацкий, португальский
 
 #### Установка ####
 Вы можете установить это приложение из Google play: <https://play.google.com/store/apps/details?id=ru.meefik.linuxdeploy>.
