@@ -69,6 +69,15 @@
         <item>X Server</item>
     </string-array>
     
+    <!-- CentOS -->
+
+    <string-array name="centos_components_entries">
+        <item>Desktop Oberfl&#228;che</item>
+        <item>SSH Server</item>
+        <item>VNC Server</item>
+        <item>X Server</item>
+    </string-array>
+    
     <!-- Arch Linux -->
 
     <string-array name="archlinux_components_entries">
