@@ -69,6 +69,15 @@
         <item>Server X</item>
     </string-array>
     
+    <!-- CentOS -->
+
+    <string-array name="centos_components_entries">
+        <item>Ambiente desktop</item>
+        <item>Server SSH</item>
+        <item>Server VNC</item>
+        <item>Server X</item>
+    </string-array>
+    
     <!-- Arch Linux -->
 
     <string-array name="archlinux_components_entries">
