@@ -30,18 +30,28 @@
         <item>Pozastaviť</item>
         <item>Zastaviť</item>
     </string-array>
+    
+    
+    <!-- Debian -->
+    
     <string-array name="debian_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
         <item>Server VNC</item>
         <item>X server</item>
     </string-array>
+    
+    <!-- Ubuntu -->
+    
     <string-array name="ubuntu_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
         <item>Server VNC</item>
         <item>X server</item>
     </string-array>
+    
+    <!-- Kali Linux -->
+    
     <string-array name="kalilinux_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
@@ -49,30 +59,54 @@
         <item>X server</item>
         <item>Súčasti distribúcie Kali</item>
     </string-array>
+    
+    <!-- Fedora -->
+    
     <string-array name="fedora_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
         <item>Server VNC</item>
         <item>X server</item>
     </string-array>
+    
+    <!-- CentOS -->
+    
+    <string-array name="centos_components_entries">
+        <item>Pracovné prostredie</item>
+        <item>Server SSH</item>
+        <item>Server VNC</item>
+        <item>X server</item>
+    </string-array>
+    
+    <!-- Arch Linux -->
+    
     <string-array name="archlinux_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
         <item>Server VNC</item>
         <item>X server</item>
     </string-array>
+    
+    <!-- openSUSE -->
+    
     <string-array name="opensuse_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
         <item>Server VNC</item>
         <item>X server</item>
     </string-array>
+    
+    <!-- Gentoo -->
+    
     <string-array name="gentoo_components_entries">
         <item>Pracovné prostredie</item>
         <item>Server SSH</item>
         <item>Server VNC</item>
         <item>X server</item>
     </string-array>
+    
+    <!-- Slackware -->
+    
     <string-array name="slackware_components_entries">
         <item>Server SSH</item>
     </string-array>
